<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/container_header"
        android:layout_width="411dp"
        android:layout_height="78dp"
        android:background="@drawable/container_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="102dp"
        android:layout_height="100dp"
        android:layout_marginStart="44dp"
        android:src="@drawable/ralph"
        app:layout_constraintStart_toStartOf="@id/container_header"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="211dp"
        android:layout_height="207dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/ralphum"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/container_header"
        tools:layout_editor_absoluteX="117dp" />

    <ImageView
        android:id="@+id/ic_redefinir"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/baseline_refresh_24"
        app:layout_constraintEnd_toEndOf="@id/container_header"
        app:layout_constraintTop_toTopOf="@id/container_header" />

    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/space_mono_bold"
        android:gravity="center"
        android:hint="@string/hint_peso"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:padding="8dp"
        android:textColor="#5179BE"
        android:textColorHint="#5179BE"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_header" />

    <EditText
        android:id="@+id/edit_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/space_mono_bold"
        android:gravity="center"
        android:hint="@string/hint_idade"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:padding="8dp"
        android:textColor="#5179BE"
        android:textColorHint="#5179BE"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_header" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_degrade_button"
        android:padding="15dp"
        android:text="@string/text_button_calcular"
        android:fontFamily="@font/space_mono_bold"
        android:textColor="#5179BE"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_peso" />

    <View
        android:id="@+id/container_resultado_ml"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/container_resultado_ml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_calcular" />

    <TextView
    android:id="@+id/txt_resultado_ml"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:fontFamily="@font/space_mono_bold"
    android:textSize="35sp"
    android:textColor="#5179BE"
    android:textStyle="bold"
    app:layout_constraintTop_toTopOf="@id/container_resultado_ml"
    app:layout_constraintStart_toStartOf="@id/container_resultado_ml"
    app:layout_constraintEnd_toEndOf="@id/container_resultado_ml"
    app:layout_constraintBottom_toBottomOf="@id/container_resultado_ml"/>

    <Button
        android:id="@+id/bt_definir_lembrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#C0D3F6"
        android:text="@string/text_button_lembrete"
        android:textColor="#5179BE"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/space_mono_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_resultado_ml" />

    <Button
        android:id="@+id/bt_alarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#C0D3F6"
        android:fontFamily="@font/space_mono_bold"
        android:text="@string/text_button_alarme"
        android:textColor="#5179BE"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_resultado_ml" />

    <TextView
        android:id="@+id/txt_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="18dp"
        android:text="@string/text_hora"
        android:textColor="#5179BE"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete" />

    <TextView
        android:id="@+id/txt_dois_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:text="@string/text_dois_pontos"
        android:textColor="#5179BE"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@id/txt_hora"
        app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete" />

    <TextView
        android:id="@+id/txt_minutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:text="@string/text_minutos"
        android:textColor="#5179BE"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@id/txt_dois_pontos"
        app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
